# cwl-oscar

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  LOCAL_RUNNER.md  README.md  cwl-oscar-cli.md  cwl2fdl.md  cwl2fdl.py  cwl2oscar.py  docker-run.sh  minio_bucket_cleanup.py  minio_cleanup.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  python-publish.yml
cwl-example/: readme.md
cwl_oscar/: README.md  __init__.py  cluster_manager.py  constants.py  executor.py  local_runner.py  main.py  oscar.py  path_mapper.py  service_manager.py  task.py  test_oscar.py  utils.py
cwl_oscar/example/: hello.txt
cwl_oscar/example/malaria-cwl-portable-package/examples/: zenodo-quality-subset.yml
cwl_oscar/example/malaria-cwl-portable-package/tools/: amplicon-quality-filter.cwl  dada2-haplotypes.cwl  final-reports.cwl  mutation-analysis.cwl
cwl_oscar/example/malaria-genomics/: README.md  create-input.sh  malaria-surveillance-scatter.cwl  malaria-surveillance.cwl
cwl_oscar/example/malaria-genomics/dockerfiles/: README.md  build_all.sh  test-single-tool.sh
cwl_oscar/example/malaria-genomics/tools/: haplotype-caller.cwl  (+8 more)
cwl_oscar/scripts/: __init__.py  oscar_service_script.py
fdl-cwl-oscar/: cwl-oscar.yaml
fdl-example/: fdl.yaml
fdl-mount/: script.sh
fdl-orquestrator/: cwl-oscar.yaml
fdl-run-command/: fdl-run-command.yaml  script.sh
fdl-run-script/: fdl-run-script.yaml
fdl-script/: fdl-cwl-oscar-script.yaml  fdl-script.yaml  script.sh
oscar-examples/fdl-orchestrator/: cwl-oscar.yaml
(+5 files in other folders)
