[project]
name = "cwl-oscar"
version = "0.1.0"
description = "A lightweight Workflow Management System to Orchestrate CWL Workflows on OSCAR clusters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cwltest>=2.6.20250314152537",
    "cwltool>=3.1.20250715140722",
    "future>=0.16.0",
    "minio>=7.2.0",
    "oscar-python>=1.3.1",
    "pydantic>=2.0.0",
    "pyjwt>=1.6.4",
    "python-dotenv>=0.19.0",
    "requests>=2.18.2",
    "typing-extensions>=3.7.4",
]
